[iOS] Animations with Bézier timing function not suspended on UI process when animation-play-state is set to "paused" https://bugs.webkit.org/show_bug.cgi?id=170784

Source/WebKit:

Reviewed by Antoine Quint.

In order to pause a running animation, GraphicsLayerCA::pauseCAAnimationOnLayer calls
PlatformCALayer::addAnimationForKey, assuming it will replace the current animation.
This patch fixes PlatformCALayerRemote::addAnimationForKey to ensure this assumption holds.

* WebProcess/WebPage/RemoteLayerTree/PlatformCALayerRemote.cpp:
(WebKit::PlatformCALayerRemote::addAnimationForKey): If the animation was already sent to
the UI process, make sure it is properly updated.

LayoutTests:

Add a reftest to visually check pausing of transform animations.

Reviewed by Antoine Quint.

* http/wpt/css/css-animations/set-animation-play-state-to-paused-001-expected.html: Added.
* http/wpt/css/css-animations/set-animation-play-state-to-paused-001.html: Added.


Canonical link: https://commits.webkit.org/202545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233460 268f45cc-cd09-0410-ab3c-d52691b4dbfc